--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^3.8.0",
+    "date-fns": "^2.28.0",
     "next": "12.1.6",
     "react": "18.1.0",
+    "react-chartjs-2": "^4.2.0",
+    "react-icons": "^4.2.0",
+    "@heroicons/react": "^1.0.4",
+    "classnames": "^2.3.1",
+    "react-content-loader": "^6.2.0",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
